--- a/src/routes/styles/foundation/_reset.scss
+++ b/src/routes/styles/foundation/_reset.scss
@@ -19,7 +19,7 @@ html {
 	line-break: strict;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	scrollbar-gutter: stable;
+	scrollbar-gutter: stable both-edges;
 }
 
 img {
