--- a/src/routes/styles/foundation/_variables.scss
+++ b/src/routes/styles/foundation/_variables.scss
@@ -12,6 +12,4 @@
 	/* m: margin */
 	--m-vertical: 1rem;
 	--m-horizontal: 0.8rem;
-
-	--scroll-bar-difference: 100vw - 100%;
 }
